[gd_scene load_steps=2 format=3 uid="uid://c620yqni6f55i"]

[ext_resource type="Script" uid="uid://t7re27pe6auo" path="res://Scripts/Menu/pause_menu.gd" id="1_i0al5"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_i0al5")
main_menu_scene = "uid://celv2gypi3neg"

[node name="Control" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.117647)

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -399.0
offset_top = -337.5
offset_right = 399.0
offset_bottom = 337.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 120

[node name="BoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="Control/MarginContainer/BoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "ИГРА НА ПАУЗЕ"

[node name="ResumeButton" type="Button" parent="Control/MarginContainer/BoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "Продолжить"

[node name="OptionsButton" type="Button" parent="Control/MarginContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "Настройки"

[node name="MainMenuButton" type="Button" parent="Control/MarginContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "Главное меню"

[node name="QuitButton" type="Button" parent="Control/MarginContainer/BoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "Выйти"

[connection signal="pressed" from="Control/MarginContainer/BoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="button_up" from="Control/MarginContainer/BoxContainer/OptionsButton" to="." method="_on_options_button_button_up"]
[connection signal="button_up" from="Control/MarginContainer/BoxContainer/MainMenuButton" to="." method="_on_main_menu_button_button_up"]
[connection signal="button_up" from="Control/MarginContainer/BoxContainer/QuitButton" to="." method="_on_quit_button_button_up"]
